--- a/app/src/main/res/layout/fragment_category_item.xml
+++ b/app/src/main/res/layout/fragment_category_item.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_height="160dp"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/categoryitem_img"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop" />
 
     <TextView
         android:id="@+id/categoryitem_text"
