--- a/app/src/main/res/layout/activity_recipe_list.xml
+++ b/app/src/main/res/layout/activity_recipe_list.xml
@@ -11,7 +11,9 @@
         android:layout_marginRight="24dp"
         android:layout_marginTop="24dp"
         android:minHeight="20dp"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textSize="30dp"
+        android:textStyle="bold"/>
 
     <ListView
         android:id="@+id/listview_recipelist"
