--- a/app/src/main/res/layout/activity_recipe_list_item.xml
+++ b/app/src/main/res/layout/activity_recipe_list_item.xml
@@ -3,31 +3,41 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="120dp"
     android:weightSum="1">
 
     <ImageView
         android:id="@+id/listItem_image"
-        android:layout_width="120dp"
-        android:layout_height="120dp" />
+        android:layout_width="175dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="fill" />
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        android:layout_marginTop="10dp">
         <TextView
             android:id="@+id/listItem_title"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:textStyle="bold"
+            android:textSize="20dp"/>
         <TextView
             android:id="@+id/listItem_author"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:textSize="20dp"
+            android:text="Writer: "/>
         <TextView
             android:id="@+id/listItem_likecount"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:textSize="20dp"
+            android:text="Like: "/>
     </LinearLayout>
 
 
