--- a/app/src/main/res/layout/fragment_category_item.xml
+++ b/app/src/main/res/layout/fragment_category_item.xml
@@ -12,7 +12,7 @@
 
     <TextView
         android:id="@+id/categoryitem_text"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:gravity="center" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"/>
 </LinearLayout>
