--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -17,7 +17,7 @@
         android:textSize="24sp" />
 
     <TextView
-        android:id="@+id/textView19"
+        android:id="@+id/tv_enterAcc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
@@ -40,7 +40,7 @@
         android:textColorHint="#dddddd" />
 
     <TextView
-        android:id="@+id/textView21"
+        android:id="@+id/tv_enterPass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
@@ -64,7 +64,7 @@
         android:textColorHint="#dddddd" />
 
     <TextView
-        android:id="@+id/textView22"
+        android:id="@+id/tv_repeatPass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
